[package]
name = "surreal_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }